# VisageFind_AI_Powered_Image_Search

./: .gitignore  README.md
back/: requirements.txt
back/app/: config.py  main.py
back/app/ml/: clip_model.py  cpp_preprocess.pyi  embeddings.py  faiss_index.py
back/app/routers/: dashboard.py  embedding.py  health.py  search.py  upload.py
back/app/services/: cache.py  db.py  embedding_store.py  init_db.py
cpp/: CMakeLists.txt  preprocess.cpp
front/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
front/src/: App.jsx  index.css
front/src/components/: ImageCard.jsx  InstallPWABtn.jsx  RecentActivity.jsx  Sidebar.jsx  StatsCard.jsx  SystemHealth.jsx  Topbar.jsx
front/src/hooks/: usePWAInstall.js
front/src/layout/: Layout.jsx
front/src/pages/: Dashboard.jsx  History.jsx  Search.jsx  Upload.jsx
front/src/services/: api.js
infra/: docker-compose.yml
